--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "@adminjs/express": "^5.0.0",
     "@adminjs/nestjs": "^5.0.0",
     "@adminjs/typeorm": "^4.0.0",
+    "@elastic/elasticsearch": "^8.2.1",
     "@nestjs/common": "^9.0.3",
     "@nestjs/core": "^9.0.3",
+    "@nestjs/elasticsearch": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.3",
     "@nestjs/swagger": "^6.0.4",
     "@nestjs/typeorm": "^9.0.0",
-    "adminjs": "^6.0.0",
+    "adminjs": "^6.0.6",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
